<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.studio202.myappportofolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:textAlignment="center"
    android:clickable="false"
    android:focusable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_available_apps"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="101dp"
        android:layout_alignParentTop="true"
        android:capitalize="characters"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:textColor="#5d5f8b"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_media_streamer"
        android:id="@+id/button1"
        android:layout_marginTop="30dp"
        android:background="#F08C35"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="sendMessage1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_score_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:background="#F08C35"
        android:onClick="sendMessage2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_library_app"
        android:id="@+id/button3"
        android:layout_marginTop="20dp"
        android:background="#F08C35"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessage3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_build_bigger"
        android:id="@+id/button4"
        android:layout_marginTop="20dp"
        android:background="#F08C35"
        android:layout_below="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessage4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_xyz_reader"
        android:id="@+id/button5"
        android:layout_marginTop="20dp"
        android:background="#F08C35"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessage5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mh_capstone"
        android:id="@+id/button6"
        android:layout_marginTop="20dp"
        android:background="#fb5901"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessage6"/>

</RelativeLayout>
